Update Class 2 slides

--- a/slides/EDUC641_2_measures.html
+++ b/slides/EDUC641_2_measures.html
@@ -141,7 +141,7 @@ Examples:
 | ?????????  | X | X | X | 
 | ?????????  | X | X | X | X
 
-.blue[**Can you match the four measurement scales to their characteristics in the above table?**] Try not to peek ahead to the next slide?
+.blue[**Can you match the four measurement scales to their characteristics in the above table?**] *Try not to peek ahead to the next slide?*
 
 ---
 # Levels of measurement
@@ -215,7 +215,7 @@ Is there a mean (or standard deviation) for the hair color of the students in th
 - Included "country" as a ratio-scale variable: US = 1, Canada = 2, S. Africa = 3, etc.
  + `\(\rightarrow\)` Canada has twice as much "country-ness" as US
  + Clearly, it should be a nominal variable and treated as such
-- Direction of results flips when measure is appropriately implemented
+- Direction of results flips when measure is appropriately operationalized
 ]
 
 .pull-right[
@@ -262,6 +262,14 @@ class: middle, inverse
 
 ### Ahhh! Don't try this at home!
 
+--
+&lt;br&gt;
+### Purpose:
+- Get to know a little about class
+- Model joy/excitement in exploring data
+- Observe process and power of data exploration
+- Set you up to do some of this yourselves
+
 ---
 # Measure reliability &amp; validity
 
@@ -275,6 +283,8 @@ class: middle, inverse
 
 &lt;img src="hi_rely.jpg" width="1529" style="display: block; margin: auto;" /&gt;
 
+--
+More on this in EDUC 645, and much more on this in EDLD 663 (*Measurement &amp; Assessment*) and EDLD 661/2 (*Item Response Theory*)!
 
 ---
 class: middle, inverse
