--- a/assignments.html
+++ b/assignments.html
@@ -1097,8 +1097,8 @@ in the above html/doc/pdf.</li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: October 10, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv) --></p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a
+href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-2" class="section level2">
