--- a/assignments.html
+++ b/assignments.html
@@ -1097,8 +1097,8 @@ in the above html/doc/pdf.</li>
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: October 10, 11:59pm</p>
-<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a
-href="./data/cat.csv">cat.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a> |
+<a href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-2" class="section level2">
@@ -1118,7 +1118,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: October 19, 11:59pm</p>
 <p>Download:
-<!-- [html file](./assignments/assignment02.html); [cat.csv dataset](./data/cat.csv) --></p>
+<!-- [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-3" class="section level2">
@@ -1131,7 +1131,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: November 7, 11:59pm</p>
 <p>Download:
-<!-- [html file](./assignments/assignment03.html); [cont.csv dataset](./data/cont.csv) --></p>
+<!-- [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-4" class="section level2">
@@ -1139,7 +1139,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 <p>Continuous data 2: intro to bivariate regression</p>
 <p>Deadline: November 28, 11:59pm</p>
 <p>Download:
-<!-- [html file](./assignments/assignment04.html); [cont.csv dataset](./data/cont.csv) --></p>
+<!-- [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="final" class="section level2">
@@ -1147,7 +1147,7 @@ and a statistical inference from a chi-squared statistic</p></li>
 <p>Final assignment</p>
 <p>Deadline: December 7, 11:59pm</p>
 <p>Download:
-<!-- [html file](./assignments/assignment05.html); [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) --></p>
+<!-- [html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) --></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 </div>
