--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -466,31 +466,32 @@ directory of the project and create folders named: “Code”, “Data”,
 dataset</a> and store it in the folder “Data”. Create an R script (or
 .Rmd) file in the Code folder. Read the data into your R environment.
 You do not need to include this response in your memo; only in your
-code.</p>
+code. <strong>(1 point)</strong></p>
 </div>
 <div id="understand-the-structure-of-the-data" class="section level4">
 <h4>2. Understand the structure of the data</h4>
 <p>2.1. Write your own code to view the dataset and write 3-4 sentences
 about the structure of the data (how many variables are there, what is
 the current type of each variable and what the type should be, how many
-rows/observations, etc.).</p>
+rows/observations, etc.). <strong>(3 points)</strong></p>
 <p>2.2. Write your own code to transform the variables, <em>treat</em>,
 <em>absenteeism</em>, and <em>cgender</em> into factor variables and
 label them consistently with the data background information above. You
-do not need to include this response in your memo; only in your
-code.</p>
+do not need to include this response in your memo; only in your code.
+<strong>(1 point)</strong></p>
 </div>
 <div id="describe-and-summarize-the-two-key-variables" class="section level4">
 <h4>3. Describe and summarize the two key variables</h4>
 <p>3.1. Write one sentence that states how many students were in the
 treatment and control groups. Provide your response and create a table
 AND a figure to demonstrate your answer. <em>Make sure to label all
-parts of your figure</em></p>
+parts of your figure!</em> <strong>(5 points)</strong></p>
 <p>3.2. Write one sentence that states what <em>proportion</em> of
 students were chronically absent? Provide your response and create a
 table AND a figure to demonstrate your answer. Write one sentence
 indicating whether this seems like a large or small proportion to you.
-<em>Make sure to label all parts of your figure</em></p>
+<em>Make sure to label all parts of your figure!</em> <strong>(5
+points)</strong></p>
 </div>
 </div>
 
