--- a/slides/EDUC641_3_categdescr.html
+++ b/slides/EDUC641_3_categdescr.html
@@ -2810,6 +2810,7 @@ class: middle, inverse
 
 ### Reading: 
 - LSWR Chapter 6: an overview of graphing in R; great to return to again and again
+- Evans (2020)
 
 ### Optional follow-up
 - Complete R Bootcamp Module 3 (installing and loading a package)
