Add lab slides and fix typo in Class 3

--- a/schedule.html
+++ b/schedule.html
@@ -1121,6 +1121,8 @@ href="./slides/EDUC641_3_categdescr.pdf">pdf</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
 <li>R code: <a href="./slides/EDUC641_3_code.R">R script</a></li>
+<li>Lab slides: <a
+href="https://claireconglizhang.github.io/my-slides/EDUC64122F/lab2.html#1">html</a></li>
 </ul>
 <p>Assignment 1:</p>
 <ul>
