--- a/slides/EDUC641_3_categdescr.html
+++ b/slides/EDUC641_3_categdescr.html
@@ -118,7 +118,8 @@ Baldus, Pulaski and Woodworth (1983) compiled criminal justice and crude demogra
 
 ```r
 # The first thing we'll do is to install the package
-# install.packages(here)  &lt;- when you do this, remove the #
+# install.packages("here")  &lt;- when you do this, remove the #
+# don't forget the quotes around the package name!
 # Then, we'll load the package:
 
 library(here)
