Update class 4-5 slides

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="David D. Liebowitz" />
 
 
-<title>EDUC 641: Applied Statistics in Education and Human Services</title>
+<title>EDUC 641: Applied Statistics in Education and Human Services I</title>
 
 <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content=""/>
@@ -948,8 +948,8 @@ Lectures
 <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
 <a href="./slides/EDUC641_2_measures.html">2. Measurement</a>
 <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
-<span class="nav-dropdown-header">4. Categorical relationships I</span>
-<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+<a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
 <span class="nav-dropdown-header">6. Troubling history of stats</span>
 <span class="nav-dropdown-header">7. Continuous descriptives I</span>
 <span class="nav-dropdown-header">8. Continuous descriptives II</span>
@@ -1013,8 +1013,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_3_categdescr.html">3. Categorical descriptives</a>
     </li>
-    <li class="dropdown-header">4. Categorical relationships I</li>
-    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_4_categrel.html">5. Categorical relationships II</a>
+    </li>
     <li class="dropdown-header">6. Troubling history of stats</li>
     <li class="dropdown-header">7. Continuous descriptives I</li>
     <li class="dropdown-header">8. Continuous descriptives II</li>
@@ -1051,7 +1055,7 @@ Lectures
 
 
 <h1 class="title toc-ignore">EDUC 641: Applied Statistics in Education
-and Human Services</h1>
+and Human Services I</h1>
 <h3 class="subtitle">College of Education, University of Oregon</h3>
 <h4 class="author">David D. Liebowitz</h4>
 
