Add Evans and update Class 4 slides

--- a/slides/EDUC641_4_categrel.html
+++ b/slides/EDUC641_4_categrel.html
@@ -190,6 +190,12 @@ it might be helpful to imagine what the proportion of defendants sentenced to de
 |Proportion | 0.608 | 0.392 | 1.000 |
 ]
 
+--
+
+&lt;br&gt;
+
+*Note*: The proportions above are rounded, so if you use them to calculate the **EXPECTED** values, they will differ slightly from those on the next slide. If you calculate the proportions by hand (i.e., `\(1506/2474 = 0.60\overline{84}\)`), you will get the exact values, and then they will align with the rounded **EXPECTED** values on the next slide.
+
 ---
 # Observed vs. Expected
 
