--- a/assignments.html
+++ b/assignments.html
@@ -1103,7 +1103,8 @@ in the above html/doc/pdf.</li>
 <p>Deadline: October 10, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment01.html">html file</a> |
 <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key: [doc file]; [R script]</p>
+<p>Key: <a href="./assignments/keys/assignment01_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment_01_key.R">R script</a></p>
 </div>
 <div id="assignment-2" class="section level2">
 <h2>3.2. Assignment 2</h2>
