Add links to assignments

--- a/assignments.html
+++ b/assignments.html
@@ -1122,8 +1122,8 @@ inference from a sample to a population</p></li>
 and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: October 19, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv) --></p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a> |
+<a href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-3" class="section level2">
