--- a/schedule.html
+++ b/schedule.html
@@ -1178,9 +1178,9 @@ href="./data/deathpenalty.csv">codebook</a></p></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
-<li>Due: October 19, 11:59pm
-<!-- - [html file](./assignments/assignment02.html) -->
-<!-- - [cat.csv dataset](./data/cat.csv) --></li>
+<li>Due: October 19, 11:59pm</li>
+<li><a href="./assignments/assignment02.html">html file</a></li>
+<li><a href="./data/cat.csv">cat.csv dataset</a></li>
 </ul>
 </div>
 <div id="unit-3" class="section level2">
