--- a/index.html
+++ b/index.html
@@ -951,8 +951,8 @@ Lectures
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_5_categrel.html">5. Categorical relationships II</a>
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<span class="nav-dropdown-header">7. Continuous descriptives I</span>
-<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <span class="nav-dropdown-header">9. Z-scores and effect sizes</span>
 <span class="nav-dropdown-header">10. CLT I</span>
 <span class="nav-dropdown-header">11. CLT II</span>
@@ -1022,8 +1022,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
     </li>
-    <li class="dropdown-header">7. Continuous descriptives I</li>
-    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
+    </li>
     <li class="dropdown-header">9. Z-scores and effect sizes</li>
     <li class="dropdown-header">10. CLT I</li>
     <li class="dropdown-header">11. CLT II</li>
