--- a/schedule.html
+++ b/schedule.html
@@ -950,8 +950,8 @@ Lectures
 <a href="./slides/EDUC641_4_categrel.html">4. Categorical relationships I</a>
 <a href="./slides/EDUC641_5_categrel.html">5. Categorical relationships II</a>
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
-<span class="nav-dropdown-header">7. Continuous descriptives I</span>
-<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+<a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <span class="nav-dropdown-header">9. Z-scores and effect sizes</span>
 <span class="nav-dropdown-header">10. CLT I</span>
 <span class="nav-dropdown-header">11. CLT II</span>
@@ -1021,8 +1021,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
     </li>
-    <li class="dropdown-header">7. Continuous descriptives I</li>
-    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
+    </li>
     <li class="dropdown-header">9. Z-scores and effect sizes</li>
     <li class="dropdown-header">10. CLT I</li>
     <li class="dropdown-header">11. CLT II</li>
@@ -1229,13 +1233,16 @@ href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li><p>Classes 7-9 (10/18, 10/20 &amp; 10/25) slides:
-<!-- [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf) --></p></li>
+<li><p>Classes 7-8 (10/18 &amp; 10/20) slides: <a
+href="./slides/EDUC641_7_continuousdescr.html">html</a> | <a
+href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></p></li>
+<li><p>Class 9 (10/25) slides: [html] | [pdf]</p></li>
 <li><p>Classes 10-13 (10/27, 11/1, 11/3 &amp; 11/8) slides:
 <!-- [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf) --></p></li>
-<li><p>Data:
-<!-- [life_expectancy.csv](./data/life_expectancy.csv) --></p></li>
-<li><p>R code: <!-- [R Script](./slides/EDUC641_7_code.R) --></p></li>
+<li><p>Data: <a
+href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
+href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
+<li><p>R code: <a href="./slides/EDUC641_7_code.R">R Script</a></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
